--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Yang's CV</title>
+    <title>Résumé of Yang Chen</title>
     <meta name="description" content="zero">
     <meta name="keywords" content="zero">
     <link rel="shortcut icon" href="322.ico">
